fixed minor issuess - added box shadow to OptionsMenu - changed sign in redirect to /stsart-shift

--- a/apps/frontend/components/OptionsMenu/OptionsMenu.module.css
+++ b/apps/frontend/components/OptionsMenu/OptionsMenu.module.css
@@ -6,6 +6,7 @@
     border: none;
     border-radius: var(--border-radius);
     cursor: pointer;
+    box-shadow: var(--box-shadow);
 }
 
 .container {
